# fem-project

./: CMakeLists.txt  README.md
files/: Advection_1D_DG_Lagrange_Weak.cpp  Advection_1D_DG_Weak.cpp  CD1D_Galerkin.cpp  Laplace_1D.cpp
include/: assemble.h  assembleDG.h  basis_function.h  matrix.h  mesh.h  post_process.h  solver.h  timestepping.h
include/umfpack/: umfpack_all.h
lib/: GradJacobiP.m  JacobiGL.m  JacobiGQ.m  LGLPOINTS
lib/Different/: Advec1D.m  AdvecDriver1D.m  AdvecRHS1D.m  BuildMaps1D.m  Connect1D.m  Dmatrix1D.m  GeometricFactors1D.m  Globals1D.m  GradVandermonde1D.m  Heat1D.m  HeatCRHS1D.m  HeatDriver1D.m  JacobiP.m  Lift1D.m  MeshGen1D.m  Normals1D.m  StartUp1D.m  Vandermonde1D.m  octave-workspace
src/: CMakeLists.txt  assemble.cpp  assembleDG.cpp  basis_function.cpp  matrix.cpp  mesh.cpp  post_process.cpp  solver.cpp  timestepping.cpp
